--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -13,8 +13,7 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ '/home/thomasbuckle-uk/dev/projects/future_publishing_test/FizzBuzz/FizzBuzz/src/Controller/IndexController.php'|file_link(0) }}">src/Controller/IndexController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/thomasbuckle-uk/dev/projects/future_publishing_test/FizzBuzz/FizzBuzz/templates/index/index.html.twig'|file_link(0) }}">templates/index/index.html.twig</a></code></li>
+        <li><a href="{{ path('front_end_test') }}">Begin Front End Test</a></li>
     </ul>
 </div>
 {% endblock %}
